; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_video_pause_check_internal.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_video_pause_check_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pause_data = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pause_data*, i64)* @video_pause_check_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @video_pause_check_internal(%struct.pause_data* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pause_data*, align 8
  %5 = alloca i64, align 8
  store %struct.pause_data* %0, %struct.pause_data** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.pause_data*, %struct.pause_data** %4, align 8
  %8 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %7, i32 0, i32 2
  store i64 %6, i64* %8, align 8
  %9 = load %struct.pause_data*, %struct.pause_data** %4, align 8
  %10 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

14:                                               ; preds = %2
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.pause_data*, %struct.pause_data** %4, align 8
  %17 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %15, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %14
  %21 = load %struct.pause_data*, %struct.pause_data** %4, align 8
  %22 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %21, i32 0, i32 0
  store i64 0, i64* %22, align 8
  %23 = load %struct.pause_data*, %struct.pause_data** %4, align 8
  %24 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %23, i32 0, i32 1
  store i64 0, i64* %24, align 8
  br label %33

25:                                               ; preds = %14
  %26 = load i64, i64* %5, align 8
  %27 = load %struct.pause_data*, %struct.pause_data** %4, align 8
  %28 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp sge i64 %26, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %25
  store i32 1, i32* %3, align 4
  br label %34

32:                                               ; preds = %25
  br label %33

33:                                               ; preds = %32, %20
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %31, %13
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
